editor and data for http://hdl.handle.net/11234/1-4746

--- a/Editor/.gitignore
+++ b/Editor/.gitignore
@@ -1,5 +1,5 @@
-resources/??/example_sentences/*txt
-resources/??/example_sentences/*php
+resources/???/example_sentences/*txt
+resources/???/example_sentences/*php
 
 Config/config_file_multi
 *~
